# roon-album-art-display

./: .flake8  .gitignore  CLAUDE.md  CONFIG.md  Makefile  README.md  TESTING.md  check_image_formats.py  dietpi-setup.sh  dietpi-wifi.db  display.py  display_new.py  health.sh  pyproject.toml  pytest.ini  requirements.txt  roon-album-art-display.service  roon-web-config.service  run_tests.py  setup.py  setup_env.py  simulate_track_change.py  space-cleaner.service  space-cleaner.sh  space-cleaner.timer  start_display  start_display.sh  test.py  timing_config.py  todo.txt  wpa_supplicant.conf
image_tools/: mount_image.sh  unmount_image.sh
libs/: epd13in3E.py  epdconfig.py
libs/screentest/: screentest.py
roon_display/: anniversary.py  health.py  internal_server.py  main.py  message_renderer.py  render_coordinator.py  simulation.py  time_utils.py  utils.py  web_config.py  web_config_backup.py
roon_display/config/: config_manager.py
roon_display/image_processing/: processor.py
roon_display/roon_client/: client.py
roon_display/viewers/: base.py  eink_viewer.py  tk_viewer.py
roon_display/web/: __init__.py  app.py  config_handler.py  utils.py
roon_display/web/static/css/: styles.css
roon_display/web/static/js/: config.js  preview.js  thumbnails.js
roon_display/web/templates/: base.html  config_form.html
roon_display/web/templates/components/: anniversaries_section.html  regular_section.html  system_section.html
tests/: conftest.py  test_config_manager.py  test_health.py  test_image_processor.py  test_integration.py  test_main.py  test_roon_client.py  test_time_utils.py  test_utils.py  test_viewers.py
